--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,8 +1,6 @@
 <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
   <div class="container">
-    <div class="logo">
-      <a href="#page-top">Jay Chuang</a>
-    </div>
+      <a class="nav-link js-scroll" href="#">Jay Chuang</a>
     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
             aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span></span>
