--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -22,11 +22,11 @@
           <div class="project-content">
             <h2 class="project-title">Personal Portfolio</h2>
             <p class="project-description text-center">
-              This application you are looking at. I used Angular and ASP.NET frameworks, C#, HTML, CSS, TypeScript, and JavaScript.
+              This application you are looking at. I used Angular framework, HTML, CSS, TypeScript, and JavaScript.
             </p>
           </div>
           <div class="project-git">
-            <a href="https://github.com/JayChuang8/portfolio-webapp" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://github.com/JayChuang8/JayChuang8.github.io" target="_blank"><i class="fab fa-github fa-2x"></i></a>
           </div>
         </div>
       </div>
