--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ h6 {
 }
 
 a {
-  color: #fff;
+  color: #0a2030;
   transition: all 0.5s ease-in-out;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
