--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -14,18 +14,18 @@
           </div>
           <div class="box-shadow-full">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-8">
                 <div class="about-me pt-4 pt-md-0">
                   <p class="lead">
-                    I like to face challenging problems and solve them in creative ways. At the University of Calgary, I am working towards a Bachelor's of Science in Software Engineering, currently in my third-year. 
+                    I like to face challenging problems and solve them in creative ways. At the University of Calgary, I am working towards a Bachelor's of Science in Software Engineering, currently in my fourth-year. 
                   </p>
                   <p class="lead">
-                    Currently an intern at Qube Technologies, I have gained industry experience in full-stack development. I'm familiar with a variety of programming languages, frameworks, and libraries, including JavaScript, TypeScript, React, Angular, C#, and .NET, but I'm always looking to learn new skills to add to my repertoire.
+                    Currently an intern at Qube Technologies, I have gained industry experience in full-stack development. I'm familiar with a variety of programming languages, frameworks, and libraries, including JavaScript, TypeScript, React, Angular, C#, .NET, Java, and C++, but I'm always looking to learn new skills to add to my repertoire.
                   </p>
                 </div>
               </div>
               <div class="about-mf about-img">
-                <img src="../../../assets/img/pic.jpg" alt="Me">
+                <img src="../../../assets/img/profile.jpg" alt="Me">
               </div>
             </div>
           </div>
