Updated portfolio with latest work experience and projects

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -17,10 +17,10 @@
               <div class="col-md-8">
                 <div class="about-me pt-4 pt-md-0">
                   <p class="lead">
-                    I like to face challenging problems and solve them in creative ways. At the University of Calgary, I am working towards a Bachelor's of Science in Software Engineering, currently in my fourth-year. 
+                    I have a passion for tackling complex issues and finding innovative solutions. I pursued a Bachelor of Science in Software Engineering at the University of Calgary, where I successfully completed my program.
                   </p>
                   <p class="lead">
-                    Currently an intern at Qube Technologies, I have gained industry experience in full-stack development. I'm familiar with a variety of programming languages, frameworks, and libraries, including JavaScript, TypeScript, React, Angular, C#, .NET, Java, and C++, but I'm always looking to learn new skills to add to my repertoire.
+                    Currently working full-time at Qube Technologies, I have gained industry experience in full-stack development. I'm familiar with a variety of programming languages, frameworks, and libraries, including TypeScript, React, Angular, C++, Java, C#, and .NET, and I'm always looking to learn new skills to add to my repertoire.
                   </p>
                 </div>
               </div>
