--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -20,17 +20,35 @@
       <div class="center-line">
         <a href="#experience" class="scroll-icon"><i class="fas fa-caret-up"></i></a>
       </div>
+      <div class="row row-2">
+        <section>
+          <i class="icon fas fa-terminal"></i>
+          <div class="details">
+            <span class="title">Full-Stack Software Developer</span>
+            <span>Sep 2022 - Present</span>
+          </div>
+          <p>
+            <b>Qube Technologies</b>
+            <br />
+            Actively participated in the complete development life cycle, encompassing tasks such as gathering requirements, design, development, testing, deployment, and maintenance. Demonstrated expertise across a diverse tech stack, which included proficiency in C#, ASP.NET Core, Postgres, React, and TypeScript.
+          </p>
+          <div class="bottom">
+            <a href="https://www.qubeiot.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
+            <i>Calgary, AB</i>
+          </div>
+        </section>
+      </div>
       <div class="row row-1">
         <section>
           <i class="icon fas fa-code-branch"></i>
           <div class="details">
             <span class="title">Software Developer Intern</span>
-            <span>Jan 2022 - Present</span>
+            <span>Jan 2022 - August 2022</span>
           </div>
           <p>
             <b>Qube Technologies</b>
             <br />
-            Worked in an agile project development team to develop a platform using React and .NET Core frameworks, that enables users to gain insights from real-time IoT sensor data
+            Worked in an agile project development team to develop a platform using React and .NET Core frameworks, that enables users to gain insights from real-time IoT sensor data.
           </p>
           <div class="bottom">
             <a href="https://www.qubeiot.com/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
@@ -48,7 +66,7 @@
           <p>
             <b>Office of the Auditor General of Canada</b>
             <br />
-            Worked in an agile software development environment, building Angular and .NET Core applications and services for the Auditor General of Canada
+            Worked in an agile software development environment, building Angular and .NET Core applications and services for the Auditor General of Canada.
           </p>
           <div class="bottom">
             <a href="https://www.oag-bvg.gc.ca/internet/english/admin_e_41.html" target="_blank"><i class="fas fa-external-link-alt"></i></a>
@@ -66,7 +84,7 @@
           <p>
             <b>Best Buy Canada</b>
             <br />
-            Responsible for sales in the computer-based department, developing relationships with customers in short time frames to close sales
+            Responsible for sales in the computer-based department, developing relationships with customers in short time frames to close sales.
           </p>
           <div class="bottom">
             <a href="https://www.bestbuy.ca/en-ca" target="_blank"><i class="fas fa-external-link-alt"></i></a>
@@ -79,7 +97,7 @@
           <i class="icon fas fa-graduation-cap"></i>
           <div class="details">
             <span class="title">University of Calgary</span>
-            <span>Sep 2018 - Present</span>
+            <span>Sep 2018 - May 2023</span>
           </div>
           <p>
             <b>Bachelor's of Science</b>
