--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -17,16 +17,16 @@
       <div class="col-md-4">
         <div class="project-box">
           <div class="project-ico">
-            <a><i class="fas fa-user fa-4x"></i></a>
+            <a><i class="fa fa-exchange fa-4x"></i></a>
           </div>
           <div class="project-content">
-            <h2 class="project-title">Personal Portfolio</h2>
+            <h2 class="project-title">GoLF Compiler</h2>
             <p class="project-description text-center">
-              This application you are looking at. I used Angular framework, HTML, CSS, TypeScript, and JavaScript.
+              A full-stack compiler developed using C++ for a subset of the Go language into MIPS assembly code for x86-64 architecture.
             </p>
           </div>
           <div class="project-git">
-            <a href="https://github.com/JayChuang8/JayChuang8.github.io" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://github.com/JayChuang8/GoLF-compiler" target="_blank"><i class="fab fa-github fa-2x"></i></a>
           </div>
         </div>
       </div>
@@ -49,7 +49,52 @@
       <div class="col-md-4">
         <div class="project-box">
           <div class="project-ico">
-            <a><i class="fas fa-exchange-alt fa-4x"></i></a>
+            <a><i class="fas fa-map fa-4x"></i></a>
+          </div>
+          <div class="project-content">
+            <h2 class="project-title">Mono-SLAM for Remote 3D Mapping</h2>
+            <p class="project-description text-center">
+              Designed and implement a cost-effective 3D mapping solution using open-source Simultaneous Localization & Mapping (SLAM) libraries.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="project-box">
+          <div class="project-ico">
+            <a><i class="fas fa-user fa-4x"></i></a>
+          </div>
+          <div class="project-content">
+            <h2 class="project-title">Personal Portfolio</h2>
+            <p class="project-description text-center">
+              This application you are looking at. I used Angular framework, HTML, CSS, TypeScript, and JavaScript.
+            </p>
+          </div>
+          <div class="project-git">
+            <a href="https://github.com/JayChuang8/JayChuang8.github.io" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="project-box">
+          <div class="project-ico">
+            <a><i class="fas fa-times fa-4x"></i></a>
+          </div>
+          <div class="project-content">
+            <h2 class="project-title">Tic Tac Toe Game</h2>
+            <p class="project-description text-center">
+              Developed a Tic Tac Toe game using Java and client-server architecture.
+            </p>
+          </div>
+          <div class="project-git">
+            <a href="https://github.com/JayChuang8/TicTacToe" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="project-box">
+          <div class="project-ico">
+            <a><i class="fas fa-paper-plane fa-4x"></i></a>
           </div>
           <div class="project-content">
             <h2 class="project-title">TCP Simulator</h2>
@@ -58,7 +103,7 @@
             </p>
           </div>
           <div class="project-git">
-            <a href="https://github.com/JayChuang8" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://github.com/JayChuang8/data-transfer" target="_blank"><i class="fab fa-github fa-2x"></i></a>
           </div>
         </div>
       </div>
