Update linkedin link

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,7 +4,7 @@
       <div class="col-sm-12">
         <div class="socials text-center">
           <ul>
-            <li><a style="padding-left:25px;" href="https://www.linkedin.com/in/jay-chuang-8810" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a></li>
+            <li><a style="padding-left:25px;" href="https://www.linkedin.com/in/jaychuang1/" target="_blank"><i class="fab fa-linkedin fa-4x"></i></a></li>
             <li><a style="padding-left:25px;" href="https://github.com/JayChuang8" target="_blank"><i class="fab fa-github fa-4x"></i></a></li>
             <li><a style="padding-left:25px;" href="mailto:jaychuang1@gmail.com" target="_blank"><i class="fas fa-envelope fa-4x"></i></a></li>
           </ul>
